--- a/src/App.css
+++ b/src/App.css
@@ -36,7 +36,8 @@
   height: 100%; 
   position: absolute; 
   top: 0;
-  right: 0; 
+  right: 0;
+  padding-left: 20px;
   transform: translateX(100%); 
   transition: transform 0.3s ease-in-out; 
   z-index: 2; 
