Highlight currently selected Menu and History item

--- a/src/History.css
+++ b/src/History.css
@@ -33,7 +33,7 @@
   }
   
   .history-entry.active {
-    background-color: #B4B4B8; /* Active state color */
+    background-color: #E3E1D9; /* Active state color */
   }
   
   .history-entry em {
