--- a/src/App.css
+++ b/src/App.css
@@ -2,19 +2,22 @@
   width: 100%;
   height: 100%;
   max-width: none;
-}
-
-html, body {
+  }
+  
+  html, body {
   height: 100%;
   margin: 0;
   padding: 0;
-}
-
-.container {
+  }
+  
+  .container {
+  height: 100%;
   padding: 0 20px;
-}
-
-.container h1 {
+  display: flex;
+  flex-direction: column;
+  }
+  
+  .container h1 {
   position: relative;
   background-color: #E3E1D9;
   padding: 10px;
@@ -22,32 +25,40 @@ html, body {
   top: 0px;
   margin-right: 75px;
   font-family: 'Inter', sans-serif;
-}
-
-.content-area {
-  display: flex;
+  }
+  
+  .content-area {
+  flex: 1;
   width: 100%;
-  box-sizing: border-box; 
-}
-
-.handsontable-container {
-  flex: 1; 
-  margin-right: 40px; 
-  margin-left: 55px; 
+  display: flex;
+  box-sizing: border-box;
+  }
+  
+  .handsontable-container {
+  flex: 1;
+  margin-right: 40px;
+  margin-left: 55px;
   overflow: hidden;
   position: relative;
   right: 55px;
-}
-
-.sidebar {
-  width: 45%; 
-  flex-shrink: 0; 
+  display: flex;
+  flex-direction: column;
+  }
+  
+  .sidebar {
+  width: 45%;
+  flex-shrink: 0;
   right: 75px;
   padding: 20px;
   background-color: #E3E1D9;
-  height: auto; 
+  height: auto;
   box-sizing: border-box;
-  position: relative; 
+  position: relative;
   z-index: 1;
   font-family: 'Inter', sans-serif;
-}
+  }
+
+  .hot-table-wrapper {
+    flex: 1;
+    overflow: hidden;
+  }
