--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@
   height: 100%;
   margin: 0;
   padding: 0;
+  overflow: hidden;
   }
   
   .container {
@@ -32,6 +33,7 @@
   width: 100%;
   display: flex;
   box-sizing: border-box;
+  overflow: hidden;
   }
   
   .handsontable-container {
@@ -51,14 +53,32 @@
   right: 75px;
   padding: 20px;
   background-color: #E3E1D9;
-  height: auto;
+  height: 100%;
   box-sizing: border-box;
   position: relative;
   z-index: 1;
   font-family: 'Inter', sans-serif;
+  overflow-y: auto;
   }
 
   .hot-table-wrapper {
     flex: 1;
     overflow: hidden;
+  }
+
+  .small-table-wrapper {
+    overflow: auto;
+    display: flex;
+    width: 100%;
+    height: 100%;
+  }
+
+  .react-resizable-handle {
+    position: absolute;
+    width: 100%;
+    height: 10px;
+    bottom: 0;
+    left: 0;
+    cursor: s-resize;
+    background-color: rgba(0, 0, 0, 0.3); /*translucent*/
   }
