--- a/src/MenuBar/MenuBar.module.css
+++ b/src/MenuBar/MenuBar.module.css
@@ -2,7 +2,7 @@
     display: flex;
     background: #D9D9D9;
     flex-direction: column;
-    max-width: calc(100% - 75px);
+    width: 100%; /* Ensure it takes full width */
     min-height: 70px;  /* Enough space for both menus */
 }
 
@@ -53,20 +53,11 @@
     outline: none;
 }
 
-.saveButton {
-    height: 100%;
-    margin-left: auto;
-    padding-right: 4%;
-    background: #F2EFE5;
-}
-
 .secondaryMenuBar {
     display: flex;
     flex-direction: row;
     align-items: center;
-    width: 100%;
     height: 35px;
-    background: #F2EFE5;
     position: relative;
     top: 0px;
 }
@@ -139,25 +130,25 @@
     max-height: 165px;
     overflow-y: auto;
     margin-top: 10px;
-  }
+}
   
-  .distinctValuesList ul {
+.distinctValuesList ul {
     list-style: none;
     padding: 0;
-  }
+}
   
-  .distinctValuesList li {
+.distinctValuesList li {
     padding: 5px;
     cursor: pointer;
-  }
+}
   
-  .distinctValuesList li:hover {
+.distinctValuesList li:hover {
     background-color: #f0f0f0;
-  }
+}
 
-  .selectClearAll {
+.selectClearAll {
     display: flex;
     justify-content: flex-start;
     gap: 10px;
     margin-bottom: 10px;
-  }
+}
