--- a/src/SidebarWithMenu/Story.css
+++ b/src/SidebarWithMenu/Story.css
@@ -6,14 +6,15 @@
   .story-textarea {
     width: 100%;
     height: auto;
-    min-height: 110px; /* Ensure a reasonable minimum height */
+    min-height: 95px; /* Ensure a reasonable minimum height */
     font-size: 16px; /* Match the font size */
     background-color: transparent; /* Match the background color */
-    border: none; /* Remove the border */
-    outline: none; /* Remove the outline on focus */
+    outline: 1px dashed black; /* Remove the outline on focus */
     padding: 10px; /* Add some padding for better appearance */
-    resize: vertical; /* Allow vertical resizing */
+    resize: none; /* Allow vertical resizing */
+    border: none;
     box-sizing: border-box; /* Include padding in width and height calculations */
+    line-height: 1.5;
   }
   
   .story-text {
