--- a/src/SidebarWithMenu/Story.css
+++ b/src/SidebarWithMenu/Story.css
@@ -1,24 +1,26 @@
 .story-container {
-    cursor: pointer;
-    width: 100%;
-  }
-  
-  .story-textarea {
-    width: 100%;
-    height: auto;
-    min-height: 95px; /* Ensure a reasonable minimum height */
-    font-size: 16px; /* Match the font size */
-    background-color: transparent; /* Match the background color */
-    outline: 1px dashed black; /* Remove the outline on focus */
-    padding: 10px; /* Add some padding for better appearance */
-    resize: none; /* Allow vertical resizing */
-    border: none;
-    box-sizing: border-box; /* Include padding in width and height calculations */
-    line-height: 1.5;
-  }
-  
-  .story-text {
-    white-space: pre-wrap; /* Preserve line breaks */
-    font-size: 16px; /* Match the font size */
-    padding: 10px; /* Add some padding for better appearance */
-  }
+  cursor: pointer;
+  width: 100%;
+  overflow-y: auto; 
+  height: calc(100% - 70px);
+}
+
+.story-textarea {
+  width: 100%;
+  height: auto;
+  min-height: 95px; /* Ensure a reasonable minimum height */
+  font-size: 16px; /* Match the font size */
+  background-color: transparent; /* Match the background color */
+  outline: 1px dashed black; /* Remove the outline on focus */
+  padding: 10px; /* Add some padding for better appearance */
+  resize: none; /* Allow vertical resizing */
+  border: none;
+  box-sizing: border-box; /* Include padding in width and height calculations */
+  line-height: 1.5;
+}
+
+.story-text {
+  white-space: pre-wrap; /* Preserve line breaks */
+  font-size: 16px; /* Match the font size */
+  padding: 10px; /* Add some padding for better appearance */
+}
