--- a/src/App.css
+++ b/src/App.css
@@ -136,7 +136,10 @@ html, body {
 
 .sidebar {
   flex-grow: 1;
-  padding: 20px;
+  padding-left: 0px;
+  padding-right: 20px;
+  padding-top: 20px;
+  padding-bottom: 20px;
   background-color: #E3E1D9;
   height: 100%;
   box-sizing: border-box;
