--- a/src/SidebarWithMenu/StoryMenu.module.css
+++ b/src/SidebarWithMenu/StoryMenu.module.css
@@ -61,3 +61,26 @@
     position: relative;
     top: 0px;
 }
+
+.dropdown {
+    position: absolute;
+    display: flex;
+    margin-left: -483px;
+    margin-top: -130px;
+    flex-direction: column;
+    background: white;
+    border: 1px solid #ccc;
+    padding: 5px;
+    z-index: 205;
+}
+
+.textOption {
+    padding: 5px 10px;
+    cursor: pointer;
+    display: flex;
+    justify-content: space-between;
+}
+
+.textOption:hover {
+    background-color: #f0f0f0;
+}
