--- a/src/SidebarWithMenu/Tutorial.module.css
+++ b/src/SidebarWithMenu/Tutorial.module.css
@@ -1,7 +1,13 @@
-.filterComponent {
-    margin-top: 20px;
+  .filterComponent {
+    padding: 20px;
+  border: 1px solid #b81616;
+  background-color: #67b6d5;
   }
   
+  .tutorial-container {
+    padding-left: 200px;
+  }
+
   .textOption {
     margin-bottom: 10px;
   }
