--- a/src/SidebarWithMenu/Story.css
+++ b/src/SidebarWithMenu/Story.css
@@ -33,7 +33,8 @@
   right: 6px;
   width: calc(100% + 24px);
   position: relative;
-  margin-bottom: -20px;
+  margin-bottom: -14px;
+  margin-top: -6px;
 }
 
 .editable-text {
@@ -82,4 +83,22 @@
   align-items: center;
   background-color: antiquewhite;
   clip-path: polygon(15% 15%, 85% 15%, 85% 85%, 15% 85%);
+}
+
+.function {
+  padding: 6px;
+  border: 2px solid #ccc;
+  margin-top: 8px;
+  background-color: transparent;
+  font-size: 16px;
+  border-radius: 2px;
+}
+
+.function-container {
+  display: flex;
+  align-items: flex-start;
+  right: 6px;
+  width: calc(100% + 24px);
+  position: relative;
+  margin-bottom: 0px;
 }
