--- a/src/SidebarWithMenu/Story.css
+++ b/src/SidebarWithMenu/Story.css
@@ -18,6 +18,7 @@
   border: none;
   box-sizing: border-box; /* Include padding in width and height calculations */
   line-height: 1.5;
+  color: black;
 }
 
 .story-text {
@@ -25,6 +26,7 @@
   font-size: 16px; /* Match the font size */
   padding-right: 10px;
   padding-top: 0px;
+  color: black;
 }
 
 .editable-text-container {
@@ -93,6 +95,7 @@
   background-color: transparent;
   font-size: 16px;
   border-radius: 2px;
+  color: black;
 }
 
 .function-container {
