--- a/src/App.css
+++ b/src/App.css
@@ -4,12 +4,13 @@
   max-width: none;
 }
 
-html, body {
+html,
+body {
   height: 100%;
   margin: 0;
   padding: 0;
   overflow: hidden;
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
   background-color: white;
   color: black;
 }
@@ -23,12 +24,12 @@ html, body {
 
 .container h1 {
   position: relative;
-  background-color: #E3E1D9;
+  background-color: #e3e1d9;
   padding: 10px;
   margin: 0;
   top: 0px;
   margin-right: 75px;
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
 }
 
 .top-banner {
@@ -37,7 +38,7 @@ html, body {
   align-items: center;
   padding: 10px;
   margin-right: 75px;
-  background-color: #E3E1D9;
+  background-color: #e3e1d9;
   position: relative;
   color: black;
 }
@@ -74,7 +75,7 @@ html, body {
   display: flex;
   flex: 1;
   top: 0;
-  background: #D9D9D9;
+  background: #d9d9d9;
   min-height: 70px;
   margin-right: 95px;
   position: relative;
@@ -85,7 +86,7 @@ html, body {
 
 .sidebar-menu-bar {
   width: 45%;
-  background: #D9D9D9;
+  background: #d9d9d9;
   min-height: 70px;
   right: 75px;
   position: relative;
@@ -108,6 +109,7 @@ html, body {
   display: flex;
   flex-direction: column;
   flex: 1;
+  height: 100%;
   width: 100%;
   position: relative;
   box-sizing: border-box;
@@ -137,25 +139,34 @@ html, body {
   z-index: 50;
 }
 
+.table-content-area {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  width: 100%;
+  position: relative;
+  box-sizing: border-box;
+  overflow: hidden;
+}
+
 .sidebar {
   flex-grow: 1;
   padding-left: 0px;
   padding-right: 20px;
   padding-top: 20px;
   padding-bottom: 20px;
-  background-color: #E3E1D9;
+  background-color: #e3e1d9;
   height: 100%;
   box-sizing: border-box;
   position: relative;
   z-index: 55;
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
   overflow-y: auto;
 }
 
 .hot-table-wrapper {
   flex: 1;
   overflow: hidden;
-  
 }
 
 .small-table-wrapper {
@@ -186,7 +197,7 @@ html, body {
   align-items: stretch;
   width: 100%; /* Adjust width to match previous sidebar width */
   height: 100%;
-  background-color: #E3E1D9; /* Match the sidebar background color */
+  background-color: #e3e1d9; /* Match the sidebar background color */
   z-index: 55;
 }
 
@@ -197,7 +208,7 @@ html, body {
   align-items: stretch;
   width: 100%; /* Adjust width to match previous sidebar width */
   height: 100%;
-  background-color: #E3E1D9; /* Match the sidebar background color */
+  background-color: #e3e1d9; /* Match the sidebar background color */
   z-index: 55;
 }
 
@@ -210,21 +221,11 @@ html, body {
   z-index: 999; /* Ensure it appears above other elements */
 }
 
-.table-content-area {
-  display: flex;
-  flex-direction: column;
-  flex: 1;
-  width: 100%;
-  position: relative;
-  box-sizing: border-box;
-  overflow: hidden;
-}
-
 .page-footer {
   display: flex;
   align-items: center;
   padding: 0px;
-  background-color: #E3E1D9;
+  background-color: #e3e1d9;
 }
 
 .nav-button {
@@ -250,4 +251,21 @@ html, body {
   height: 100%;
   font-size: 24px;
   color: #555;
+}
+
+.editable-textarea {
+  width: calc(100% - 2px);
+  font-size: 26px;
+  margin: 1px;
+  background-color: transparent;
+  padding-top: 10px;
+  padding-bottom: 0px;
+  resize: none;
+  border: none;
+  box-sizing: border-box;
+  line-height: 26px;
+  line-height: 1.5;
+  color: black;
+  text-align: center;
+  font-weight: bold;
 }
