--- a/src/SidebarWithMenu/Story.css
+++ b/src/SidebarWithMenu/Story.css
@@ -148,3 +148,42 @@
   position: relative;
   right: 4px; 
 }
+
+.table-container {
+  display: flex;
+  align-items: flex-start;
+  width: 100%;
+  /* Ensure full width */
+  position: relative;
+  margin-bottom: 0px;
+}
+
+.table-wrapper {
+  width: 100%;
+  /* Ensure full width */
+}
+
+.small-table-wrapper {
+  overflow: auto;
+  width: 100%;
+  /* Ensure full width */
+  height: 100%;
+}
+
+.expandButton {
+  display: block;
+  width: 100%;
+  /* Ensure full width */
+  padding: 1px;
+  margin: 0;
+  border: none;
+  background-color: #f0f0f0;
+  cursor: pointer;
+  text-align: center;
+  font-size: 14px;
+  border-radius: 0;
+}
+
+.expandButton:hover {
+  background-color: #d0d0d0;
+}
