modify table highlight options

--- a/src/SidebarWithMenu/Tutorial.module.css
+++ b/src/SidebarWithMenu/Tutorial.module.css
@@ -7,7 +7,10 @@
   }
 
   .textOption {
-    margin-bottom: 10px;
+    padding: 5px 10px;
+    cursor: pointer;
+    display: flex;
+    justify-content: space-between;
   }
   
   .inputContainer {
