--- a/src/SidebarWithMenu/Tutorial.module.css
+++ b/src/SidebarWithMenu/Tutorial.module.css
@@ -8,9 +8,11 @@
 
   .textOption {
     padding: 5px 10px;
+    max-height: 50px;
     cursor: pointer;
     display: flex;
     justify-content: space-between;
+    overflow: auto;
   }
   
   .inputContainer {
