--- a/src/TableWithMenu/MenuBar/MenuBar.module.css
+++ b/src/TableWithMenu/MenuBar/MenuBar.module.css
@@ -91,7 +91,7 @@
     margin-top: 0px;
     display: flex;
     flex-wrap: wrap;
-    width: 130px;
+    max-width: 114px;
     background: white;
     border: 1px solid #ccc;
     padding: 5px;
