--- a/src/History.css
+++ b/src/History.css
@@ -1,6 +1,6 @@
 .history-sidebar {
   width: 130px; /* Default width for collapsed state */
-  background-color: #F2EFE5;
+  background-color: #f2efe5;
   height: calc(100% - 60px);
   position: fixed;
   top: 0;
@@ -19,92 +19,92 @@
   width: 30%; /* Width for expanded state */
 }
 
-.history-entry {
-    cursor: pointer;
-    padding: 10px;
-    margin-bottom: 5px;
-    font-family: 'Inter', sans-serif;
-    font-size: 16px;
-    transition: background-color 0.3s;
-  }
-  
-  .history-entry:hover {
-    background-color: #E3E1D9;
-  }
-  
-  .history-entry.active {
-    background-color: #E3E1D9;
-  }
-  
-  .history-entry em {
-    font-style: normal;
-    color: #666;
-    margin-bottom: 5px;
-  }
-  
-  .history-entry ul {
-    list-style-type: disc;
-    margin-top: 0;
-    padding-left: 20px;
-  }
-  
-  .history-entry li {
-    margin-bottom: 2px; 
-  }
-
-  .history-entry details {
-    margin-top: 10px;
-  }
-
-  .history-entry summary {
-    cursor: pointer;
-    font-weight: bold;
-  }
-
-  .history-entry pre {
-    background: #f9f9f9;
-    padding: 10px;
-    border-radius: 4px;
-    margin: 0;
-  }
-
-  .collapsed-button {
-    display: block;
-    position: absolute;
-    top: 10px;
-    left: 10px;
-    width: 55px;
-    background-color: #F2EFE5;
-    border: none;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-  }
-
-  .collapsed-button:hover {
-    background-color: #E3E1D9;
-  }
-
-  .button {
-    flex-grow: 1;
-    height: 100%;
-    font-family: 'Inter', sans-serif;
-    font-size: 16px;
-    line-height: 30px;
-    text-align: center;
-    color: #000000;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: inherit;
-    border: none;
-    cursor: pointer;
-    outline: none;
-    padding: 0 10px;
+.history-entry input {
+  width: 90%;
+  font-family: "Inter", sans-serif;
+  font-size: 16px;
+  padding: 3px;
+  margin: 5px 0;
+  box-sizing: border-box;
 }
-  
+
+.history-entry:hover {
+  background-color: #e3e1d9;
+}
+
+.history-entry.active {
+  background-color: #e3e1d9;
+}
+
+.history-entry em {
+  font-style: normal;
+  color: #666;
+  margin-bottom: 5px;
+}
+
+.history-entry ul {
+  list-style-type: disc;
+  margin-top: 0;
+  padding-left: 20px;
+}
+
+.history-entry li {
+  margin-bottom: 2px;
+}
+
+.history-entry details {
+  margin-top: 10px;
+}
+
+.history-entry summary {
+  cursor: pointer;
+  font-weight: bold;
+}
+
+.history-entry pre {
+  background: #f9f9f9;
+  padding: 10px;
+  border-radius: 4px;
+  margin: 0;
+}
+
+.collapsed-button {
+  display: block;
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  width: 55px;
+  background-color: #f2efe5;
+  border: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.collapsed-button:hover {
+  background-color: #e3e1d9;
+}
+
+.button {
+  flex-grow: 1;
+  height: 100%;
+  font-family: "Inter", sans-serif;
+  font-size: 16px;
+  line-height: 30px;
+  text-align: center;
+  color: #000000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: inherit;
+  border: none;
+  cursor: pointer;
+  outline: none;
+  padding: 0 10px;
+}
+
 .button:hover {
-    background: #DAD6CA;
-    outline: none;
+  background: #dad6ca;
+  outline: none;
 }
