--- a/src/History.css
+++ b/src/History.css
@@ -68,7 +68,15 @@
   margin: 0;
 }
 
-.collapsed-button {
+.button-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 10px;
+  margin-top: 10px;
+}
+
+.toggle-button {
   display: block;
   position: absolute;
   top: 10px;
@@ -82,8 +90,26 @@
   text-align: center;
 }
 
-.collapsed-button:hover {
+.toggle-button:hover {
   background-color: #e3e1d9;
+}
+
+.delete-button {
+  display: block;
+  position: absolute;
+  top: 10px;
+  left: 100px;
+  width: 55px;
+  background-color: #dc3546b8;
+  border: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.delete-button:hover {
+  background-color: #c82333;
 }
 
 .button {
