--- a/src/TableWithMenu/MenuBar/MenuBar.module.css
+++ b/src/TableWithMenu/MenuBar/MenuBar.module.css
@@ -1,154 +1,155 @@
 .menuBarContainer {
-    display: flex;
-    background: #D9D9D9;
-    flex-direction: column;
-    width: 100%; /* Ensure it takes full width */
-    min-height: 70px;  /* Enough space for both menus */
+  display: flex;
+  background: #d9d9d9;
+  flex-direction: column;
+  width: 100%; /* Ensure it takes full width */
+  min-height: 108px; /* Enough space for both menus */
 }
 
 .menuBar {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    padding: 0px;
-    width: 100%;
-    height: 35px;  /* Height of the primary menu */
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 0px;
+  width: 100%;
+  height: 35px; /* Height of the primary menu */
 }
 
-.menuItem, .secondaryMenuItem {
-    display: flex;
-    width: auto;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-    height: 35px;
-    background: #F2EFE5;
+.menuItem,
+.secondaryMenuItem {
+  display: flex;
+  width: auto;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  height: 35px;
+  background: #f2efe5;
 }
 
 .activeMenuItem {
-    background: #E3E1D9;
+  background: #e3e1d9;
 }
 
 .button {
-    flex-grow: 1;
-    height: 100%;
-    font-family: 'Inter', sans-serif;
-    font-size: 20px;
-    line-height: 30px;
-    text-align: center;
-    color: #000000;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: inherit;
-    border: none;
-    cursor: pointer;
-    outline: none;
-    padding: 0 30px;
+  flex-grow: 1;
+  height: 100%;
+  font-family: "Inter", sans-serif;
+  font-size: 20px;
+  line-height: 30px;
+  text-align: center;
+  color: #000000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: inherit;
+  border: none;
+  cursor: pointer;
+  outline: none;
+  padding: 0 30px;
 }
 
 .button:hover {
-    background: #E3E1D9;
-    outline: none;
+  background: #e3e1d9;
+  outline: none;
 }
 
 .secondaryMenuBar {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    height: 35px;
-    position: relative;
-    top: 0px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  height: 35px;
+  position: relative;
+  top: 0px;
 }
 
 .Dropdown {
-    position: absolute;
-    display: flex;
-    margin-left: -20px;
-    margin-top: -131px;
-    flex-direction: column;
-    background: white;
-    border: 1px solid #ccc;
-    padding: 5px;
-    z-index: 200;
+  position: absolute;
+  display: flex;
+  margin-left: -20px;
+  margin-top: -131px;
+  flex-direction: column;
+  background: white;
+  border: 1px solid #ccc;
+  padding: 5px;
+  z-index: 200;
 }
 
 .textOption {
-    padding: 5px 10px;
-    cursor: pointer;
-    display: flex;
-    justify-content: space-between;
+  padding: 5px 10px;
+  cursor: pointer;
+  display: flex;
+  justify-content: space-between;
 }
 
 .textOption:hover {
-    background-color: #f0f0f0;
+  background-color: #f0f0f0;
 }
 
 .colorDropdown {
-    position: absolute;
-    margin-left: 0px;
-    margin-top: 0px;
-    display: flex;
-    flex-wrap: wrap;
-    max-width: 114px;
-    background: white;
-    border: 1px solid #ccc;
-    padding: 5px;
-    z-index: 1;
+  position: absolute;
+  margin-left: 0px;
+  margin-top: 0px;
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 114px;
+  background: white;
+  border: 1px solid #ccc;
+  padding: 5px;
+  z-index: 1;
 }
 
 .inputContainer {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .applyButton {
-    background-color: white;
-    border: 1px solid #ccc;
-    padding: 2px 5px;
-    margin-left: 8px;
-    cursor: pointer;
-    font-size: 14px;
-    font-family: 'Inter', sans-serif;
-    min-width: 80px;
+  background-color: white;
+  border: 1px solid #ccc;
+  padding: 2px 5px;
+  margin-left: 8px;
+  cursor: pointer;
+  font-size: 14px;
+  font-family: "Inter", sans-serif;
+  min-width: 80px;
 }
 
 .applyButton:hover {
-    background-color: #f0f0f0;
+  background-color: #f0f0f0;
 }
 
 .colorSquare {
-    width: 20px;
-    height: 20px;
-    margin: 2px;
-    cursor: pointer;
-    border: 1px solid black;
+  width: 20px;
+  height: 20px;
+  margin: 2px;
+  cursor: pointer;
+  border: 1px solid black;
 }
 
 .distinctValuesList {
-    max-height: 165px;
-    overflow-y: auto;
-    margin-top: 10px;
+  max-height: 165px;
+  overflow-y: auto;
+  margin-top: 10px;
 }
-  
+
 .distinctValuesList ul {
-    list-style: none;
-    padding: 0;
+  list-style: none;
+  padding: 0;
 }
-  
+
 .distinctValuesList li {
-    padding: 5px;
-    cursor: pointer;
+  padding: 5px;
+  cursor: pointer;
 }
-  
+
 .distinctValuesList li:hover {
-    background-color: #f0f0f0;
+  background-color: #f0f0f0;
 }
 
 .selectClearAll {
-    display: flex;
-    justify-content: flex-start;
-    gap: 10px;
-    margin-bottom: 10px;
+  display: flex;
+  justify-content: flex-start;
+  gap: 10px;
+  margin-bottom: 10px;
 }
