--- a/src/SidebarWithMenu/Story.css
+++ b/src/SidebarWithMenu/Story.css
@@ -3,7 +3,7 @@
   width: 100%;
   position: relative;
   overflow-x: auto;
-  height: calc(100% - 100px);
+  height: calc(100% - 30px);
 }
 
 .story-textarea {
@@ -37,6 +37,7 @@
   right: 6px;
   width: 100%;
   position: relative;
+  top: 20px;
   overflow: visible;
 }
 
@@ -152,7 +153,7 @@
 .table-container {
   display: flex;
   align-items: flex-start;
-  right: 6px;
+  right: 5px;
   width: calc(100% - 24px);
   position: relative;
   margin-bottom: 0px;
@@ -183,4 +184,30 @@
 
 .expandButton:hover {
   background-color: #d0d0d0;
+}
+
+.btn-circle {
+  width: 40px;
+  height: 40px;
+  border-radius: 50% !important;
+  margin-bottom: 40px;
+  margin-left: 40px;
+  padding: 5px 10px;
+  font-size: 20px;
+  text-align: center;
+}
+
+.story-card {
+  z-index: 1000;
+  position: absolute;
+  bottom: 270px;
+  left: 40px;
+  width: 400px;
+  background-color: #f0f8ff;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+}
+
+.custom-card-background {
+  background-color: var(--light) !important;
 }
