--- a/src/SidebarWithMenu/Story.css
+++ b/src/SidebarWithMenu/Story.css
@@ -40,7 +40,6 @@
 .edit-menu-toggle button {
   background: none;
   position: relative;
-  height: 100%;
   width: 100%;
   border: none;
   cursor: pointer;
@@ -62,7 +61,6 @@
 .edit-menu button {
   background: none;
   position: relative;
-  height: 100%;
   width: 100%;
   left: 4px;
   border: none;
@@ -144,18 +142,23 @@
   width: calc(100% - 24px);
   position: relative;
   margin-bottom: 0px;
-}
-
-.table-wrapper {
-  width: 100%;
-  position: relative;
-  right: 8px;
+  overflow: auto;
 }
 
 .small-table-wrapper {
-  overflow: hidden;
   width: 100%;
-  height: 100%;
+  position: relative;
+  right: 8px;
+  margin-bottom: 0;
+  overflow: auto;
+}
+
+.table-wrapper {
+  width: fit-content;
+  position: relative;
+  right: 8px;
+  margin-bottom: 0;
+  overflow: auto;
 }
 
 .expandButton {
@@ -169,6 +172,10 @@
   text-align: center;
   font-size: 14px;
   border-radius: 0;
+  position: relative; /* Absolute positioning */
+  bottom: 0; /* Stick to the bottom of the small-table-wrapper */
+  left: 0;
+  right: 0;
 }
 
 .expandButton:hover {
