--- a/src/SidebarWithMenu/Story.css
+++ b/src/SidebarWithMenu/Story.css
@@ -108,7 +108,7 @@
   z-index: 10;
   line-height: 1;
   z-index: 300;
-  border: 2px solid black;
+  border: 2px dashed black;
   width: 100%;
   box-sizing: border-box;
 }
